[gd_scene load_steps=3 format=3 uid="uid://tg7m2qr4tba6"]

[ext_resource type="Script" uid="uid://bpncty1mrirgr" path="res://scripts/killzone.gd" id="1_xlapc"]
[ext_resource type="AudioStream" uid="uid://q4tf5cpblwqk" path="res://assets/sounds/hurt.wav" id="2_kl8fp"]

[node name="Killzone" type="Area2D"]
collision_mask = 2
script = ExtResource("1_xlapc")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="DeathSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_kl8fp")
bus = &"SFX"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
